# municipal_performance_scraping

./: .gitignore  README.md  pyproject.toml
data/raw/: municipalities_list.csv
municipal_performance_scraping/: cli.py  config.py  extractors.py  loaders.py  main.py  models.py  transformers.py
notebooks/: 01_transform_performance_data.ipynb  03_exploration.ipynb  04_learn_glom.ipynb
tests/: test_municipal_performance_scraping.py  test_transformers.py
